--- a/SoogbadNotes/src/main/res/layout/activity_main.xml
+++ b/SoogbadNotes/src/main/res/layout/activity_main.xml
@@ -7,22 +7,32 @@
     android:fitsSystemWindows="false"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/green"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:title="@string/app_name"
-        app:titleTextColor="@color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </androidx.appcompat.widget.Toolbar>
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar">
+    </include>
 
-    <com.soogbad.soogbadnotes.Note
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-    </com.soogbad.soogbadnotes.Note>
+        android:text="Add Item"
+        android:onClick="onAddButtonClick"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </Button>
+
+    <Button
+        android:id="@+id/exampleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Example Note"
+        android:onClick="onExampleNoteButtonClick"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addButton"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
